--- a/src/components/Capitals/index.css
+++ b/src/components/Capitals/index.css
@@ -1,59 +1,108 @@
 .app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #93c5fd;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.capital-card-container {
-  height: 300px;
-  width: 50%;
+.capitals-container {
   background-color: #f8fafc;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 50px;
-  border-radius: 15px;
-}
-.main-heading {
-  color: #000000;
-  font-size: 24px;
-  font-family: 'Roboto';
-  font-weight: 600;
+  border-radius: 16px;
+  width: 96%;
+  padding: 20px;
+  max-width: 345px;
 }
 
-.option-container {
-  display: flex;
-
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .capitals-container {
+    padding-top: 44px;
+    padding-left: 64px;
+    padding-right: 64px;
+    max-width: 520px;
+  }
 }
 
-.country-list {
-  height: 40px;
-  width: 200px;
-  border: 1px solid #cbd2d9;
-  border-radius: 3px;
-  padding-left: 10px;
-  font-family: 'Roboto';
-  font-size: 19px;
-  color: #323f4b;
-  font-weight: bold;
-  outline: none;
-}
-.question-text {
-  color: #323f4b;
-  font-family: 'Roboto';
-  font-size: 19px;
-  font-weight: 400;
-  padding-left: 5px;
-}
-
-.country-name {
+.heading {
   color: #1e293b;
   font-family: 'Roboto';
   font-size: 24px;
   font-weight: 500;
-  text-align: left;
+}
+
+@media screen and (min-width: 768px) {
+  .heading {
+    text-align: left;
+    font-size: 32px;
+  }
+}
+
+.question-container {
+  display: flex;
+  align-items: center;
+}
+
+.capital-select {
+  background-color: #f8fafc;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: 500;
+  width: 100px;
+  height: 40px;
+  border: 1px solid #cbd2d9;
+  border-radius: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .capital-select {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    width: 180px;
+    font-size: 16px;
+  }
+}
+
+.option {
+  color: #323f4b;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+  .option {
+    font-size: 14px;
+  }
+}
+
+.question {
+  color: #000000;
+  font-family: 'Roboto';
+  font-size: 12px;
+  margin-left: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .question {
+    font-size: 16px;
+  }
+}
+
+.country {
+  color: #1e293b;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+  .country {
+    font-family: 'Roboto';
+    font-size: 24px;
+  }
 }
